# llm-skills

./: .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  marketplace.json  plugin.json  pyrightconfig.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  skill_proposal.md
.github/workflows/: audit.yml  release.yml  validate.yml
docs/: authoring.md  governance.md  installing.md
docs/superpowers/plans/: 2026-05-21-llm-skills-host.md
docs/superpowers/specs/: 2026-05-21-llm-skills-host-design.md
docs/targets/: claude-plugin.md  claude-skill.md  openai.md
plugins/reasoning-framework/: body.md
plugins/reasoning-framework/.claude-plugin/: plugin.json
skills/e2e-demo/: SKILL.md  body.md  skill.json
skills/reasoning-framework/: SKILL.md  body.md  skill.json
spec/: .verify.sh  README.md  marketplace-entry.schema.json  skill.schema.json
spec/examples/minimal-skill/: body.md  skill.json
tools/py/: README.md  pyproject.toml
tools/py/src/llm_skills/: __init__.py  cli.py  draft.py  eval.py  loader.py  score.py
tools/py/tests/: test_cli.py  test_draft.py  test_eval.py  test_loader.py  test_score.py  test_smoke.py
tools/py/tests/fixtures/good-skill/: body.md  skill.json
tools/ts/: .eslintrc.cjs  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
tools/ts/src/: build.ts  check.ts  cli.ts  lint.ts  load.ts  marketplace.ts  new.ts  (+4 more)
(+21 files in other folders)
