[project]
name = "llm-skills"
version = "0.1.0"
description = "Evaluate, draft, and score llm-skills."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "ravenoak" }]
dependencies = [
  "anthropic>=0.40",
  "openai>=1.50",
  "jsonschema>=4.23",
  "click>=8.1",
  "pydantic>=2.8"
]

[project.scripts]
llm-skills = "llm_skills.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_skills"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src/llm_skills", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
  "mypy>=1.11"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
pythonVersion = "3.13"
